feat: Add LogcatService and necessary permissions
- Added `LogcatService` to `AndroidManifest.xml` with `foregroundServiceType` set to `dataSync`.
- Added `POST_NOTIFICATIONS` permission to allow posting notifications, required for Foreground Services on Android 13+.
- Added `FOREGROUND_SERVICE` permission to allow running foreground services.
- Added `FOREGROUND_SERVICE_DATA_SYNC` permission for data synchronization foreground services.
- Updated `tools:ignore` for `QUERY_ALL_PACKAGES` permission to include `PackageVisibilityPolicy`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
-        tools:ignore="QueryAllPackagesPermission" />
+        tools:ignore="PackageVisibilityPolicy,QueryAllPackagesPermission" />
     <permission android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="ReservedSystemPermission" />
+
+    <!-- Request permission to post notifications (required for Foreground Services on Android 13+) -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+    <!-- Request permission to run a foreground service -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"
+        tools:ignore="ForegroundServicesPolicy" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
     <application
         android:allowBackup="true"
@@ -27,6 +35,9 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".services.LogcatService"
+            android:foregroundServiceType="dataSync" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
