Refactor: Introduce Koin for DI and restructure UI with ViewModels
- Added Koin for dependency injection (`koin-android`, `koin-androidx-compose`).
- Created `Loki` Application class to initialize Koin.
- Moved `HomeScreen.kt` to `ui/home/HomeScreen.kt`.
- Introduced `HomeViewModel` to manage `HomeScreen` state, including navigation and exit confirmation.
- Created `AppListScreen.kt` and `AppListViewModel.kt` to handle app listing, logcat interaction, and permission requests, previously managed in `HomeScreen`.
- `AppListViewModel` now checks for root access and shows a dialog if not available.
- Added `NavItem.kt` to define navigation items for the bottom bar.
- Implemented `SavedScreen.kt` as a placeholder for saved logs.
- `MainActivity` now uses the new `HomeScreen` from `ui.home` and passes an `onExitConfirmed` callback.
- Added `settings_filled.xml` drawable for settings icon.
- Updated `AndroidManifest.xml` to use the `Loki` application class.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ accompanistDrawablepainter = "0.37.3"
 kotlinx-serialization-json = "1.9.0"
 material3 = "1.4.0-alpha18"
 splashscreen = "1.0.1"
+koinAndroid = "4.1.0"
 
 [libraries]
 androidx-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
@@ -33,6 +34,9 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 topjohnwu-libsu-core = { module = "com.github.topjohnwu.libsu:core", version.ref = "libsu" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
+#Koin
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
+koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
