feat: Implement Saved Logs screen and enhance log management
- Renamed `SavedScreen.kt` to `SavedLogsScreen.kt` and refactored it to display a list of apps with their saved logs.
    - Each app item shows the app name and the number of saved logs.
    - Items are expandable to show the 3 most recent log files.
    - Each log file entry displays the timestamp and a "note_alt" icon.
    - A "View all" button appears if an app has more than 3 logs.
    - Includes loading and empty states.
    - Introduces `SavedLogActions` for handling user interactions (view more, click log).
- Added `SavedLogsViewModel.kt`:
    - Manages the UI state for the saved logs screen (`SavedLogsUiState`).
    - Loads and organizes saved logs from the `filesDir/logs` directory.
    - Log files are grouped by package name.
    - Retrieves `AppInfo` for each package using `AppInfoGrabber`.
    - Sorts logs by timestamp (newest first) and apps by name.
- Updated `HomeScreen.kt`:
    - Replaced `SavedScreen` with `SavedLogsScreen`.
    - Added basic handling for `SavedLogActions`.
- Modified `AppInfoGrabber.kt`:
    - Added `getAppInfo(packageName: String)` to retrieve `AppInfo` for a specific package.
    - Corrected null checks in `getAllInstalledApps` and `getSystemApps`.
- Added `SavedLogs.kt` with data classes `SavedLog` (timestamp, file) and `LoggedApp` (AppInfo, list of SavedLogs).
- Updated `SuCli.kt`:
    - Changed exception handling in the logcat process to print stack traces for `CancellationException` and other exceptions.
- Added new drawable resources:
    - `note_alt.xml` (log file icon)
    - `unfold_less.xml`
    - `unfold_more.xml`
- Updated `Modules.kt` (Koin DI):
    - Added `SavedLogsViewModel` to the module.
    - Provided `filesDir` as a singleton.
- Added new IDE configuration files:
    - `.idea/compiler.xml` (sets bytecode target level to 21)
    - `.idea/vcs.xml`
    - `.idea/google-java-format.xml` (disabled)
    - `.idea/dictionaries/project.xml` (adds "pidof" to dict

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ kotlinx-serialization-json = "1.9.0"
 material3 = "1.4.0-alpha18"
 splashscreen = "1.0.1"
 koinAndroid = "4.1.0"
+shizuku = "13.1.5"
+hiddenapibypass = "6.1"
 
 [libraries]
 androidx-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
