feat: Implement onboarding and permission management
- Added `OnboardingScreen.kt` to guide users through granting `READ_LOGS` permission.
    - Displays options for Root, Shizuku, and ADB.
    - Provides a button to copy the ADB command.
    - Triggers `onSetupComplete` when a permission method is successfully used or indicated.
- Introduced `OnboardingViewModel.kt` to manage the UI state for the onboarding process.
    - Checks for root and Shizuku availability.
    - Handles the Shizuku permission grant flow.
- Added `PermissionManager.kt` to centralize permission checking and granting logic.
    - `hasReadLogsPermission()`: Checks if `READ_LOGS` is granted.
    - `isRootAvailable()`: Checks for root access.
    - `isShizukuAvailable()`: Checks for Shizuku installation and permission.
    - `grantReadLogsViaShizuku()`: Attempts to grant `READ_LOGS` using Shizuku.
- Created `Shizuku.kt` as a utility object to interact with Shizuku services.
    - Provides methods for force stopping apps, setting app disabled/hidden/suspended states, clearing cache, and executing shell commands via Shizuku.
- Modified `MainActivity.kt` to show `OnboardingScreen` if necessary permissions are not yet granted.
- Updated `SuCli.kt` (`fetchLogs` function):
    - Renamed `showLogs` to `fetchLogs`.
    - Now accepts a `Context` to check permissions.
    - Delegates log fetching to `fetchLogsWithPermission` or `fetchLogsWithRoot` based on available permissions.
    - `fetchLogsWithPermission`: Uses standard `Process` for logcat when `READ_LOGS` is granted.
    - `fetchLogsWithRoot`: Continues to use libsu for root-based logcat.
    - Unified `stopLogger` to handle both `Process` and libsu `Future`.
- Added Shizuku dependencies (`shizuku-api`, `shizuku-provider`) to `gradle/libs.versions.toml` and `app/build.gradle.kts`.
- Removed `hiddenapibypass` dependency from `gradle/libs.versions.toml`.
- Added new drawables: `done.xml` and `copy.xml`.
- Added `shizuku` to project dictionary.
- Regist

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,6 @@ material3 = "1.4.0-alpha18"
 splashscreen = "1.0.1"
 koinAndroid = "4.1.0"
 shizuku = "13.1.5"
-hiddenapibypass = "6.1"
 
 [libraries]
 androidx-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
@@ -39,6 +38,10 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 #Koin
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinAndroid" }
+#Shizuku
+shizuku-api = { module = "dev.rikka.shizuku:api", version.ref = "shizuku" }
+shizuku-provider = { module = "dev.rikka.shizuku:provider", version.ref = "shizuku" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
