--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-sdk tools:overrideLibrary="rikka.shizuku.api" />
     <uses-permission android:name="shizuku.permission.API_V23" />
 
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
         android:name=".Loki"
